# sapa-project

./: README.md
LTSpice/: electret_mic_amplified.asc  full.asc  project_full.asc
app/: .prettierignore  main.py  package.json  tailwind.config.js
app/src/: atoms.js  chart.jsx  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: bpm.rs  fft.rs  filter.rs  globals.rs  lib.rs  main.rs  utils.rs
app/src-tauri/src/dsp/: fft.rs  filter.rs  mod.rs
app/src/charts/: fftChart.jsx  filteredFftChart.jsx  filteredMicChart.jsx  micChart.jsx
arduino/: arduino.ino
be/: LICENSE  README.md  fft.js  filters.js  index.js  package.json
fe/: LICENSE  README.md  index.html  package.json
fe-tauri/: README.md  index.html  package.json
fe-tauri/src/: App.jsx  socket.js
fe-tauri/src-tauri/: tauri.conf.json
fe-tauri/src-tauri/src/: main.rs
fe/public/: index.html  site.webmanifest
fe/src/: App.js  app.jsx  index.js  main.jsx
fe/src/components/: Chart copy.jsx  Chart.jsx
