[package]
name = "digital-stethoscope"
version = "0.1.0"
description = "Digital Stethoscope app built for AGU SAPA capsule project."
authors = ["Barış DEMİRCİ", "Selin Nisa AKGÖL", "Nuri İNCEÖZ"]
edition = "2021"
repository = "https://github.com/barbarbar338/sapa-project"
publish = false

[lib]
name = "digital_stethoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.2.0"
iir_filters = "0.1.3"
firmata-rs = "0.4.3"
serialport = "4.6.1"
lazy_static = "1.5.0"
